ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/IKOPRO_Account_Payment__c.object-meta.xml
<CustomObject>
    <label>Contractor Payment</label>
    <nameField>
        <displayFormat>INV - {00000}</displayFormat>
        <label>PaymentID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contractor Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>