ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to contractor applicant contact in order to store the payment record for the signup process payment. (payment info will be copied to the contractor account once that account is created).</description>
    <inlineHelpText>Lookup to contractor applicant contact in order to store the payment record for the signup process payment. (payment info will be copied to the contractor account once that account is created).</inlineHelpText>
    <label>Applicant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Account_Payments</relationshipName>
    <type>Lookup</type>
</CustomField>