ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/ATM_Name__c.field-meta.xml
<CustomField>
    <fullName>ATM_Name__c</fullName>
    <description>Related ATM name for the Tier Promotion payment record</description>
    <label>ATM Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>