ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Benefits_Consent_Date_for_Tier_0__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Consent_Date_for_Tier_0__c</fullName>
    <label>Benefits Consent Date for Tier 0</label>
    <type>Date</type>
</CustomField>