ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Benefits_Consent_for_Tier_0__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Consent_for_Tier_0__c</fullName>
    <defaultValue>false</defaultValue>
    <description>meant only for tier 0 membership renewal</description>
    <label>Benefits Consent for Tier 0</label>
    <type>Checkbox</type>
</CustomField>