ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Check_Nr__c.field-meta.xml
<CustomField>
    <fullName>Check_Nr__c</fullName>
    <formula>IF( TEXT(Contractor__r.BillingCountryCode) = &apos;CA&apos; &amp;&amp; NOT(ISBLANK(Cheque_Nr_CA__c)), Cheque_Nr_CA__c,
IF( TEXT(Contractor__r.BillingCountryCode) = &apos;US&apos; &amp;&amp; NOT(ISBLANK(Cheque_Nr_US__c )), Cheque_Nr_US__c,
NULL)
)</formula>
    <label>Check Number</label>
    <type>Text</type>
</CustomField>