ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Cheque_Nr_US__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Nr_US__c</fullName>
    <label>Cheque Nr US</label>
    <length>30</length>
    <type>Text</type>
</CustomField>