ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <label>Contractor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>IKOPRO Contractor</value>
        </filterItems>
        <filterItems>
            <field>Account.Name</field>
            <operation>equals</operation>
            <value>APPLICANTS</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>