ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Credits__c.field-meta.xml
<CustomField>
    <fullName>Credits__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>