ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <formula>IF(ISBLANK( Applicant__c ), 
IF(ISPICKVAL(Contractor__r.BillingCountryCode,&apos;CA&apos;), &quot;CAD&quot;, &quot;USD&quot;),

IF(Applicant__r.Country_Code_Applicant__c = &apos;CA&apos;, &quot;CAD&quot;, &quot;USD&quot;)
)</formula>
    <label>Currency</label>
    <type>Text</type>
</CustomField>