ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Due_Amount__c.field-meta.xml
<CustomField>
    <fullName>Due_Amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Membership Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>