ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/First_Payment__c.field-meta.xml
<CustomField>
    <fullName>First_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To distinguish a first payment for the applicant (contact or account) with subsequent payments.</description>
    <label>First Payment</label>
    <type>Checkbox</type>
</CustomField>