ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Full_Membership_Fee__c.field-meta.xml
<CustomField>
    <fullName>Full_Membership_Fee__c</fullName>
    <formula>Payment__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Membership Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>