ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/HIDDEN_Field_City_Street__c.field-meta.xml
<CustomField>
    <fullName>HIDDEN_Field_City_Street__c</fullName>
    <description>This field is getting used in visualforce page &quot;icPaymentInvoicePDF&quot; for generation of Account Payment Invoices.</description>
    <formula>IF( Contractor__r.Name !=&apos;APPLICANTS&apos;, IF(ISPICKVAL(Contractor__r.BillingCountryCode,&apos;CA&apos;), 
&apos;1600 42nd Avenue SE&apos;, 
IF(ISPICKVAL(Contractor__r.BillingCountryCode,&apos;US&apos;),&apos;6 Denny Road, Suite 104&apos;, &apos;&apos;)), IF(CONTAINS(Applicant__r.Country_Code_Applicant__c,&apos;CA&apos;), 
&apos;1600 42nd Avenue SE&apos;, 
IF(CONTAINS(Applicant__r.Country_Code_Applicant__c,&apos;US&apos;),&apos;6 Denny Road, Suite 104&apos;, &apos;&apos;)))</formula>
    <label>HIDDEN Field City Street</label>
    <type>Text</type>
</CustomField>