ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/HIDDEN_Field_State__c.field-meta.xml
<CustomField>
    <fullName>HIDDEN_Field_State__c</fullName>
    <description>This field is getting used in visualforce page &quot;icPaymentInvoicePDF&quot; for generation of Account Payment Invoices.</description>
    <formula>IF( Contractor__r.Name !=&apos;APPLICANTS&apos;, IF(ISPICKVAL(Contractor__r.BillingCountryCode,&apos;CA&apos;), 
&apos;Calgary, AB, T2G 5B5&apos;, 
IF(ISPICKVAL(Contractor__r.BillingCountryCode,&apos;US&apos;),&apos;Wilmington Delaware, 19809&apos;, &apos;&apos;)), IF(CONTAINS(Applicant__r.Country_Code_Applicant__c,&apos;CA&apos;), 
&apos;Calgary, AB, T2G 5B5&apos;, 
IF(CONTAINS(Applicant__r.Country_Code_Applicant__c,&apos;US&apos;),&apos;Wilmington Delaware, 19809&apos;, &apos;&apos;)))</formula>
    <label>HIDDEN Field State</label>
    <type>Text</type>
</CustomField>