ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Hidden_Temp_Field_No_Proration__c.field-meta.xml
<CustomField>
    <fullName>Hidden_Temp_Field_No_Proration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be used in Net Amount formula field when no proration needs to be done.</description>
    <label>Override Due Amount</label>
    <type>Checkbox</type>
</CustomField>