ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/IKO_Address__c.field-meta.xml
<CustomField>
    <fullName>IKO_Address__c</fullName>
    <formula>IF(ISBLANK( Applicant__c ), 
IF(ISPICKVAL(Contractor__r.BillingCountryCode,&apos;CA&apos;), &quot;1600 42nd Avenue SE, Calgary, AB, T2G 5B5&quot;, &quot;6 Denny Road Suite 104 Wilmington Delaware 19809&quot;),

IF(Applicant__r.Country_Code_Applicant__c = &apos;CA&apos;, &quot;1600 42nd Avenue SE, Calgary, AB, T2G 5B5&quot;, &quot;6 Denny Road Suite 104 Wilmington Delaware 19809&quot;)
)</formula>
    <label>IKO Address</label>
    <type>Text</type>
</CustomField>