ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/IKO_Office__c.field-meta.xml
<CustomField>
    <fullName>IKO_Office__c</fullName>
    <description>This field is getting used in visualforce page &quot;icPaymentInvoicePDF&quot; to get the company name based on location.</description>
    <formula>IF(
AND(
ISBLANK( Applicant__c ),
TEXT(Contractor__r.BillingCountryCode) =&apos;CA&apos;,
TEXT(Contractor__r.Loyalty_Program_Type__c) = &apos;CRC&apos;
),
&apos;CanRoof Corporation&apos;, 
IF(
AND(
ISBLANK( Applicant__c ),
TEXT(Contractor__r.BillingCountryCode) = &apos;CA&apos;,
TEXT(Contractor__r.Loyalty_Program_Type__c) &lt;&gt;&apos;CRC&apos;
),
&apos;IKO Industries Ltd.&apos;,
IF(
AND(
Applicant__r.Country_Code_Applicant__c = &apos;CA&apos;,
TEXT(Contractor__r.Loyalty_Program_Type__c) = &apos;CRC&apos;
),
&apos;CanRoof Corporation&apos;,
IF(
AND(
Applicant__r.Country_Code_Applicant__c = &apos;CA&apos;,
TEXT(Contractor__r.Loyalty_Program_Type__c) &lt;&gt; &apos;CRC&apos;
),
&apos;IKO Industries Ltd.&apos;, &apos;IKO Industries Inc.&apos;))))</formula>
    <label>IKO Office</label>
    <type>Text</type>
</CustomField>