ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Invoice_Item__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Item__c</fullName>
    <formula>IF( 
AND(Contractor__r.Name =&apos;APPLICANTS&apos;,TEXT($User.ROOFPRO_Portal_Language__c)=&apos;English&apos;),&apos;Membership&apos;,
IF(AND(Contractor__r.Name =&apos;APPLICANTS&apos;,TEXT($User.ROOFPRO_Portal_Language__c)=&apos;Quebec French&apos;),&apos;Adhésion&apos;,
IF(AND(Contractor__r.Name !=&apos;APPLICANTS&apos;,TEXT($User.ROOFPRO_Portal_Language__c)=&apos;English&apos;, TEXT(Payment_Type__c)=&apos;Membership Fees&apos;),&apos;Membership&apos;,
IF(AND(Contractor__r.Name !=&apos;APPLICANTS&apos;,TEXT($User.ROOFPRO_Portal_Language__c)=&apos;Quebec French&apos;, TEXT(Payment_Type__c)=&apos;Membership Fees&apos;),&apos;Adhésion&apos;,
IF(AND(Contractor__r.Name !=&apos;APPLICANTS&apos;,TEXT($User.ROOFPRO_Portal_Language__c)=&apos;English&apos;, TEXT(Payment_Type__c)=&apos;Tier Advancement&apos;),&apos;Tier Advancement&apos;,
IF(AND(Contractor__r.Name !=&apos;APPLICANTS&apos;,TEXT($User.ROOFPRO_Portal_Language__c)=&apos;Quebec French&apos;, TEXT(Payment_Type__c)=&apos;Tier Advancement&apos;),&apos;Avancement de niveau&apos;,&apos;Membership&apos;
))))))</formula>
    <label>Invoice Item</label>
    <type>Text</type>
</CustomField>