ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <formula>Invoice_Item__c + &apos; (&apos; +  Selected_Tier__c  + &apos;) &apos; + &apos; - &apos;+  Year__c</formula>
    <label>Item Description</label>
    <type>Text</type>
</CustomField>