ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Last_Payment__c.field-meta.xml
<CustomField>
    <fullName>Last_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked (only for membership fee account payments) when a payment is made, so PB can untick the previous membership fee account payment. (Membership Renewal Flow looks for the Account Payment Record with &apos;Last Pament&apos; ticked in order to determine the &apos;Year&apos;-field value, so the new account payment record is created for the correct year.</description>
    <label>Last Payment</label>
    <type>Checkbox</type>
</CustomField>