ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Net_Amount_Roll_up_Helper__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_Roll_up_Helper__c</fullName>
    <label>Net Amount Roll-up Helper</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>