ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Net_Membership_Fee__c.field-meta.xml
<CustomField>
    <fullName>Net_Membership_Fee__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Net Amount Due</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>