ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/No_Payment_Required__c.field-meta.xml
<CustomField>
    <fullName>No_Payment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True when Contractors opts to stay on the default Tier after Tier Promotion</inlineHelpText>
    <label>No Payment Required</label>
    <type>Checkbox</type>
</CustomField>