ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Override_Date__c.field-meta.xml
<CustomField>
    <fullName>Override_Date__c</fullName>
    <label>Override Date</label>
    <type>Date</type>
</CustomField>