ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Amount__c</fullName>
    <label>Paid Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>