ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <label>Payment</label>
    <referenceTo>IKOPRO_Payment__c</referenceTo>
    <relationshipName>Account_Payments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>