ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Payment_Source__c.field-meta.xml
<CustomField>
    <fullName>Payment_Source__c</fullName>
    <inlineHelpText>Values will come from Payment Gateway</inlineHelpText>
    <label>Payment Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Paypal</fullName>
            </value>
            <value>
                <fullName>Prozone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>