ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Payment_Transaction_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction_Code__c</fullName>
    <description>Value will come from Payment Gateway (in case of PayPal payment)</description>
    <label>Payment Transaction Code</label>
    <length>250</length>
    <type>Text</type>
</CustomField>