ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>To distinguish different payments (Membership Fees, Tier Buy-up,..) for ROOFPRO</description>
    <label>Related To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Membership Fees</fullName>
            </value>
            <value>
                <fullName>Tier Buy-up</fullName>
            </value>
            <value>
                <fullName>Tier Advancement</fullName>
            </value>
            <value>
                <fullName>Refund Issued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>