ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Prorated_Membership_Fee__c.field-meta.xml
<CustomField>
    <fullName>Prorated_Membership_Fee__c</fullName>
    <description>Full Membership Fee for the Tier, prorated for the remaining months of the year. Populated with Process Builder &apos;Actions from Account Payment&apos;. Or is it with Workflow?</description>
    <label>Prorated Membership Fee</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>