ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Remaining_Months_Proration__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Months_Proration__c</fullName>
    <formula>IF(Month(DATEVALUE(CreatedDate))==1, 12, 12-Month(DATEVALUE(CreatedDate)) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>