ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Renewal_Complete__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Complete__c</fullName>
    <description>This field is in use for the Renewal Status report, report resides in Inder&apos;s Private folder for the time being.</description>
    <formula>if(AND(NOT(ISBLANK(Paid_Date__c)), Year__c =&apos;2020&apos;) ,&apos;Complete&apos;, &apos;Pending&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewal Status</label>
    <type>Text</type>
</CustomField>