ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Renewal_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Date__c</fullName>
    <label>Renewal Date</label>
    <type>Date</type>
</CustomField>