ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/RenewalDateTimeFormula__c.field-meta.xml
<CustomField>
    <fullName>RenewalDateTimeFormula__c</fullName>
    <formula>DATETIMEVALUE( Renewal_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RenewalDateTimeFormula</label>
    <type>DateTime</type>
</CustomField>