ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Report_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Due_Date__c</fullName>
    <formula>IF( Today()&gt;Due_Date__c, 1,
IF( AND(Due_Date__c&gt;=Today(), Due_Date__c - Today() &lt; 31), 30,
IF(AND(Due_Date__c - Today()&gt;30, 
       Due_Date__c - Today()&lt;61
       ),60, 
IF(AND(Due_Date__c - Today()&gt;60,
	Due_Date__c - Today()&lt;91
       ),90,
	91
  )
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report_Due Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>