ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Selected_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Selected_Payment_Method__c</fullName>
    <description>Populated by &quot;Membership Renewal&quot;-flow (ROOFPRO) in order to determine if a payment record was already created prior to payment (e.g. in case the partner user logs out after record creation and before payment execution).
Values are: &apos;Online&apos; or &apos;Cheque&apos;.</description>
    <label>Selected Payment Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>