ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Selected_Tier__c.field-meta.xml
<CustomField>
    <fullName>Selected_Tier__c</fullName>
    <description>Stores the selected Tier Name based on the choices made by the contractor during Membership Renewal (flow).
Value displays in the Contractor&apos;s language (English, French or Spanish).</description>
    <label>Selected Tier</label>
    <length>25</length>
    <type>Text</type>
</CustomField>