ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Simplified_Signup_Account_Payment__c.field-meta.xml
<CustomField>
    <fullName>Simplified_Signup_Account_Payment__c</fullName>
    <description>Ticked when it concerns a contractor (applicant) that goes through the simplified one step signup process (in this case the account payment is linked to the account instead of to the applicant contact record).</description>
    <formula>IF(NOT(ISBLANK(Applicant__c)), Applicant__r.Simplified_Signup__c, 

IF(NOT(ISBLANK(Contractor__c)), Contractor__r.Applicant_Information__r.Simplified_Signup__c , FALSE)

)</formula>
    <label>Simplified Signup</label>
    <type>Checkbox</type>
</CustomField>