ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Terms__c.field-meta.xml
<CustomField>
    <fullName>Terms__c</fullName>
    <formula>&apos;30 Days&apos;</formula>
    <label>Terms</label>
    <type>Text</type>
</CustomField>