ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/Terms_and_Conditions_Consent_for_Tier_0__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions_Consent_for_Tier_0__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms and Conditions Consent for Tier 0</label>
    <type>Checkbox</type>
</CustomField>