ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/fields/X2nd_Follow_up_Date__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Follow_up_Date__c</fullName>
    <label>2nd Follow-up Date</label>
    <type>Date</type>
</CustomField>