ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contractor__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Payment__c</columns>
    <columns>Due_Amount__c</columns>
    <columns>Net_Membership_Fee__c</columns>
    <columns>Paid_Amount__c</columns>
    <columns>Paid_Date__c</columns>
    <columns>First_Payment__c</columns>
    <columns>Renewal__c</columns>
    <columns>Check_Nr__c</columns>
    <columns>Year__c</columns>
    <columns>Last_Payment__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>