ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Account_Payment__c/listViews/Cheques_Sent_Shared_Services.listView-meta.xml
<ListView>
    <fullName>Cheques_Sent_Shared_Services</fullName>
    <columns>Contractor__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Net_Membership_Fee__c</columns>
    <columns>Check_Nr__c</columns>
    <columns>Year__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Paid_Amount__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Paid_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Check_Nr__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Cheques Sent (Renewals)</label>
    <language>en_US</language>
    <sharedTo>
        <group>Loyalty_Team</group>
    </sharedTo>
</ListView>